Bug 1793220 - Handle at-page size rules that use zero as width or height r=dholbert

Setting an at-page size where the width or height is zero is valid CSS but is unprintable, so a size with zero in it will be ignored with this change.

Differential Revision: https://phabricator.services.mozilla.com/D167624